# proxy-lib

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  Makefile  README.md  container-structure-test.yaml  docker-compose.yml  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/actions-rs/: grcov.yml
.github/workflows/: build-and-push.yml  ci.yml
scripts/: start.sh
src/: lib.rs  metrics.rs  web.rs
src/auth/: credentials.rs  mod.rs
src/http/: mod.rs  request.rs  response.rs
src/proxy/: flow.rs  handler.rs  mod.rs
tests/: proxy_tests.rs  web_tests.rs
